# CRAFT

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  demo.py  requirements.txt
configs/: craft_config.yaml  mapping_rules.yaml  noah_config.yaml
crates/craft-ai/: Cargo.toml
crates/craft-ai/src/: lib.rs
crates/craft-analyzer/: Cargo.toml
crates/craft-analyzer/src/: lib.rs
crates/craft-cli/: Cargo.toml
crates/craft-cli/src/: main.rs
crates/craft-core/: Cargo.toml
crates/craft-core/src/: error.rs  lib.rs
crates/craft-generator/: Cargo.toml
crates/craft-generator/src/: lib.rs
crates/craft-generator/tests/: integration_test.rs
crates/craft-parser/: Cargo.toml
crates/craft-parser/src/: arkts_parser.rs  java_parser.rs  lib.rs
crates/craft-parser/tests/: integration_test.rs
crates/craft-pipeline/: Cargo.toml
crates/craft-pipeline/src/: lib.rs
docs/: ARCHITECTURE_DESIGN.md  CODE_RUNNABLE_ANALYSIS.md  COUNTER_APP_DESIGN.md  FEASIBILITY_ANALYSIS.md  FRAMEWORK_DETAILED_DESIGN.md  RUNNING_GUIDE.md  TEST_CASES_REPORT.md  TIEBA_API_BRIDGE_LIST.md
examples/counter-app/: README.md  craft_generate.py  verify_code.py
examples/counter-app/android/: gradlew  settings.gradle
examples/counter-app/android/app/: build.gradle
examples/counter-app/android/app/src/main/: AndroidManifest.xml
examples/counter-app/android/app/src/main/java/com/example/counter/: MainActivity.java
examples/counter-app/android/app/src/main/res/drawable/: button_gray.xml
examples/counter-app/android/app/src/main/res/layout/: activity_main.xml
examples/counter-app/android/app/src/main/res/values/: themes.xml
examples/counter-app/harmony/: build-profile.json5  oh-package.json5
examples/counter-app/harmony/AppScope/: app.json5
examples/counter-app/harmony/entry/src/main/: module.json5
examples/counter-app/harmony/entry/src/main/ets/: EntryAbility.ets
examples/counter-app/harmony/entry/src/main/ets/adapters/: MainActivityAdapter.ets
examples/counter-app/harmony/entry/src/main/ets/pages/: Index.ets
examples/counter-app/harmony/entry/src/main/resources/base/element/: string.json
examples/counter-app/tests/: __init__.py  run_all_tests.py  test_craft_generator.py  test_openharmony_syntax.py
src/analyzers/: __init__.py  android_parser.py  harmony_parser.py  semantic_analyzer.py
src/core/: __init__.py  api_spec.py  config.py  mapping_rule.py
src/generators/: __init__.py  adapter_generator.py  test_generator.py
src/pipeline/: __init__.py  batch_processor.py  orchestrator.py
templates/prompts/: generate_adapter.md
tests/: Cargo.toml  e2e_test.rs
tests/fixtures/android/app/: Activity.java  Fragment.java
tests/fixtures/harmony/ability/: UIAbility.ets
