[package]
name = "craft-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Claude API integration for AI-powered code generation"

[dependencies]
craft-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
