[package]
name = "craft-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command line interface for CRAFT"

[[bin]]
name = "craft-cli"
path = "src/main.rs"

[dependencies]
craft-core = { workspace = true }
craft-parser = { workspace = true }
craft-analyzer = { workspace = true }
craft-generator = { workspace = true }
craft-ai = { workspace = true }
craft-pipeline = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
