[package]
name = "craft-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data structures and types for CRAFT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
