[package]
name = "craft-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SDK parsers using tree-sitter for CRAFT"

[dependencies]
craft-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-java = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
